usecases/gpt-oss/manifests/serving/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpt-oss-120b-route-svc
  labels:
    app.kubernetes.io/name: gpt-oss-120b
    app.kubernetes.io/component: route-service
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  selector:
    app: isvc.gpt-oss-120b-predictor
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
